log/build_2023-09-18_16-16-47/my_bleak/stderr.log
  File "/home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak/bleak_node.py", line 64
    await asyncio.sleep(0.1)
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function

